--- a/index.html
+++ b/index.html
@@ -9,31 +9,7 @@
 
 <body>
 <h1>HELLO WORLD!!!!</h1>
-
-<p>小草~~我成功了~~WAHAHA</p>
-
--------------------------------------------------------------
-<p>請看這篇試試,<a href="https://xiwan.io/archive/github-pages-use-custom-domain-name.html#github-pages-settings" target="_blank" > CLICK ME </a>
-</p>
-
-<ul>
-    <li>基本上在github裡, 妳需要手動去改_config.yml, 還有把CNAME裡的內容改成你的domain</li>
-     <li>比方我的domain是: gotojoyce.me</li>
-        <li>我在_congig.yml裡就會變成填 url:http://gotojoyce.me</li>
-        <li>CANME裡的內容就填gotojoyce.me即可</li>
-        <li>-------------------------------------------------------------</li>
-        <li></li>
-        <li>然後接下來要去妳買domain的地方設一些東東, 把域名指向你的github page:</li>
-        <li>1. 先把到一個叫做DNS ZONE (區域紀錄檔)之類的地方, 然後幫它新增二個東西
-一個是A(host), 一個是CNAME．</li>
-        <li>要輸入什麼內容，可參考剛貼的教學頁，</li>
-        <li>而其中它會要求我們輸一個要指向的地方（points to / 我的是叫做IPv4)
-IP就隨便打一個符合格式的即可, 我是學教學上的數字192.30.252.153</li>
-    <li>2. 改CNAME, 在這裡就要points to輸入妳的githubpage給的預設URL即可~~</li>
-    <li>-------------------------------------------------------------</li>
-    <li>結案~ ^________^ good luck!!</li>
-</ul>
-
+	<p>this is joyce's page :)</p>
 
 </body>
 </html>
